--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -366,7 +366,7 @@
 
     <string name="allergy_intolerance_uppercase_label" description="Uppercase label used to show the user's allergy intolerance data [CHAR_LIMIT=50]">Allergies</string>
     <string name="allergy_intolerance_lowercase_label" description="Lowercase label used to show the user's allergy intolerance data [CHAR_LIMIT=50]">allergies</string>
-    <string name="allergy_intolerance_content_description" description="Content description for switch that enables permissions for reading the user's allergy intolerance data [CHAR_LIMIT=NONE]">Read allergies</string>
+    <string name="allergy_intolerance_content_description" description="Content description for switch that enables permissions for reading the user's allergy and intolerance data [CHAR_LIMIT=NONE]">Read allergies</string>
 
     <string name="immunization_uppercase_label" description="Uppercase label used to show the user's immunization data [CHAR_LIMIT=50]">Immunization</string>
     <string name="immunization_lowercase_label" description="Lowercase label used to show the user's immunization data [CHAR_LIMIT=50]">immunization</string>
@@ -379,6 +379,10 @@
     <string name="medications_uppercase_label" description="Uppercase label used to show the user's medications data [CHAR_LIMIT=50]">Medications</string>
     <string name="medications_lowercase_label" description="Lowercase label used to show the user's medications data [CHAR_LIMIT=50]">medications</string>
     <string name="medications_content_description" description="Content description for switch that enables permissions for reading the user's medications data [CHAR_LIMIT=NONE]">Read medications</string>
+
+    <string name="personal_details_uppercase_label" description="Uppercase label used to show the user's personal details (eg date of birth, name, address etc) [CHAR_LIMIT=50]">Personal details</string>
+    <string name="personal_details_lowercase_label" description="Lowercase label used to show the user's personal details (eg date of birth, name, address etc) [CHAR_LIMIT=50]">personal details</string>
+    <string name="personal_details_content_description" description="Content description for switch that enables permissions for reading the user's personal details (eg date of birth, name, address etc) [CHAR_LIMIT=NONE]">Read personal details</string>
 
     <string name="pregnancy_uppercase_label" description="Uppercase label used to show the user's pregnancy data [CHAR_LIMIT=50]">Pregnancy</string>
     <string name="pregnancy_lowercase_label" description="Lowercase label used to show the user's pregnancy data [CHAR_LIMIT=50]">pregnancy</string>
