--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -384,6 +384,10 @@
     <string name="personal_details_lowercase_label" description="Lowercase label used to show the user's personal details (eg date of birth, name, address etc) [CHAR_LIMIT=50]">personal details</string>
     <string name="personal_details_content_description" description="Content description for switch that enables permissions for reading the user's personal details (eg date of birth, name, address etc) [CHAR_LIMIT=NONE]">Read personal details</string>
 
+    <string name="practitioner_details_uppercase_label" description="Uppercase label used to show the user's medical practitioners (eg doctors, nurses but also masseurs, coaches etc) [CHAR_LIMIT=50]">Practitioner details</string>
+    <string name="practitioner_details_lowercase_label" description="Lowercase label used to show the user's medical practitioners (eg doctors, nurses but also masseurs, coaches etc) [CHAR_LIMIT=50]">practitioner details</string>
+    <string name="practitioner_details_content_description" description="Content description for switch that enables permissions for reading the user's medical practitioners (eg doctors, nurses but also masseurs, coaches etc) [CHAR_LIMIT=NONE]">Read practitioner details</string>
+
     <string name="pregnancy_uppercase_label" description="Uppercase label used to show the user's pregnancy data [CHAR_LIMIT=50]">Pregnancy</string>
     <string name="pregnancy_lowercase_label" description="Lowercase label used to show the user's pregnancy data [CHAR_LIMIT=50]">pregnancy</string>
     <string name="pregnancy_content_description" description="Content description for switch that enables permissions for reading the user's pregnancy data [CHAR_LIMIT=NONE]">Read pregnancy</string>
