--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -404,6 +404,10 @@
     <string name="social_history_lowercase_label" description="Lowercase label used to show the user's social history data [CHAR_LIMIT=50]">social history</string>
     <string name="social_history_content_description" description="Content description for switch that enables permissions for reading the user's social history data [CHAR_LIMIT=NONE]">Read social history</string>
 
+    <string name="visits_uppercase_label" description="Uppercase label used to show the user's visits to a doctor or other encounters with a medical professional [CHAR_LIMIT=50]">Visits</string>
+    <string name="visits_lowercase_label" description="Lowercase label used to show the user's visits to a doctor or other encounters with a medical professional [CHAR_LIMIT=50]">visits</string>
+    <string name="visits_content_description" description="Content description for switch that enables permissions for reading the user's visits to a doctor or other encounters with a medical professional [CHAR_LIMIT=NONE]">Read visits</string>
+
     <string name="vital_signs_uppercase_label" description="Uppercase label used to show the user's vital signs data [CHAR_LIMIT=50]">Vital Signs</string>
     <string name="vital_signs_lowercase_label" description="Lowercase label used to show the user's vital signs data [CHAR_LIMIT=50]">vital signs</string>
     <string name="vital_signs_content_description" description="Content description for switch that enables permissions for reading the user's vital signs data [CHAR_LIMIT=NONE]">Read vital signs</string>
