--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -368,6 +368,10 @@
     <string name="allergy_intolerance_lowercase_label" description="Lowercase label used to show the user's allergy intolerance data [CHAR_LIMIT=50]">allergies</string>
     <string name="allergy_intolerance_content_description" description="Content description for switch that enables permissions for reading the user's allergy and intolerance data [CHAR_LIMIT=NONE]">Read allergies</string>
 
+    <string name="conditions_uppercase_label" description="Uppercase label used to show the user's data about medical conditions [CHAR_LIMIT=50]">Conditions</string>
+    <string name="conditions_lowercase_label" description="Lowercase label used to show the user's data about medical conditions [CHAR_LIMIT=50]">conditions</string>
+    <string name="conditions_content_description" description="Content description for switch that enables permissions for reading the user's data about medical conditions [CHAR_LIMIT=NONE]">Read conditions</string>
+
     <string name="immunization_uppercase_label" description="Uppercase label used to show the user's immunization data [CHAR_LIMIT=50]">Immunization</string>
     <string name="immunization_lowercase_label" description="Lowercase label used to show the user's immunization data [CHAR_LIMIT=50]">immunization</string>
     <string name="immunization_content_description" description="Content description for switch that enables permissions for reading the user's immunization data [CHAR_LIMIT=NONE]">Read immunization</string>
@@ -391,10 +395,6 @@
     <string name="pregnancy_uppercase_label" description="Uppercase label used to show the user's pregnancy data [CHAR_LIMIT=50]">Pregnancy</string>
     <string name="pregnancy_lowercase_label" description="Lowercase label used to show the user's pregnancy data [CHAR_LIMIT=50]">pregnancy</string>
     <string name="pregnancy_content_description" description="Content description for switch that enables permissions for reading the user's pregnancy data [CHAR_LIMIT=NONE]">Read pregnancy</string>
-
-    <string name="problems_uppercase_label" description="Uppercase label used to show the user's problem data [CHAR_LIMIT=50]">Problems</string>
-    <string name="problems_lowercase_label" description="Lowercase label used to show the user's problem data [CHAR_LIMIT=50]">problems</string>
-    <string name="problems_content_description" description="Content description for switch that enables permissions for reading the user's problem data [CHAR_LIMIT=NONE]">Read problems</string>
 
     <string name="procedures_uppercase_label" description="Uppercase label used to show the user's procedure data [CHAR_LIMIT=50]">Procedures</string>
     <string name="procedures_lowercase_label" description="Lowercase label used to show the user's procedure data [CHAR_LIMIT=50]">procedures</string>
