--- a/apk/res/values-en-rCA/strings.xml
+++ b/apk/res/values-en-rCA/strings.xml
@@ -267,9 +267,12 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"skin temperature"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Read skin temperature"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Write skin temperature"</string>
-    <string name="all_medical_data_uppercase_label" msgid="8415418677595814587">"All medical data"</string>
-    <string name="all_medical_data_lowercase_label" msgid="7173275705446657735">"all medical data"</string>
-    <string name="all_medical_data_content_description" msgid="6103488863059447886">"Write all medical data"</string>
+    <!-- no translation found for all_medical_data_uppercase_label (2380759160541898783) -->
+    <skip />
+    <!-- no translation found for all_medical_data_lowercase_label (6293814928992081842) -->
+    <skip />
+    <!-- no translation found for all_medical_data_content_description (4846586780533295022) -->
+    <skip />
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"Allergies"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"allergies"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"Read allergies"</string>
@@ -279,6 +282,9 @@
     <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"Laboratory Results"</string>
     <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"laboratory results"</string>
     <string name="laboratory_results_content_description" msgid="5882338877203692484">"Read laboratory results"</string>
+    <string name="medications_uppercase_label" msgid="4783281053427990225">"Medications"</string>
+    <string name="medications_lowercase_label" msgid="7808038774503092207">"medications"</string>
+    <string name="medications_content_description" msgid="6165382876281780190">"Read medications"</string>
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"Pregnancy"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"pregnancy"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"Read pregnancy"</string>
@@ -330,7 +336,18 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Selected day"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Previous day"</string>
     <string name="default_error" msgid="7966868260616403475">"Something went wrong. Please try again."</string>
-    <string name="raw_fhir_content_description" msgid="4869120157736279594">"Detailed health record"</string>
+    <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <skip />
+    <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
+    <skip />
+    <!-- no translation found for raw_fhir_closed_bracket (9084379463440675078) -->
+    <skip />
+    <!-- no translation found for raw_fhir_field_value (369633095565031835) -->
+    <skip />
+    <!-- no translation found for raw_fhir_value (8627152854130338531) -->
+    <skip />
+    <!-- no translation found for raw_fhir_content_description (1491420802097635439) -->
+    <skip />
     <string name="health_permission_header_description" msgid="7497601695462373927">"Apps with this permission can read and write your health and fitness data."</string>
     <string name="connected_apps_text" msgid="1177626440966855831">"Control which apps can access data stored in Health Connect. Tap an app to review the data it can read or write."</string>
     <string name="connected_apps_section_title" msgid="2415288099612126258">"Allowed access"</string>
@@ -1042,12 +1059,6 @@
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"Enable at least one read permission in order to turn on background or past data access for this app"</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"Enable at least one read permission in order to turn on background access for this app"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"Enable at least one read permission in order to turn on past data access for this app"</string>
-    <string name="all_data_selected_deletion_confirmation_dialog" msgid="8480788219767858637">"Permanently delete all data from Health Connect?"</string>
-    <string name="some_data_selected_deletion_confirmation_dialog" msgid="8053452143397916044">"Permanently delete selected data from Health Connect?"</string>
-    <string name="all_data_selected_deletion_confirmation_toast" msgid="4053974969132498842">"All data deleted"</string>
-    <string name="one_data_type_deletion_confirmation_toast" msgid="7773896019111767141">"<xliff:g id="PERMISSION_TYPE">%s</xliff:g> data deleted"</string>
-    <string name="multiple_data_types_deletion_confirmation_toast" msgid="8500329390797706450">"<xliff:g id="NUMBER_PERMISSION_TYPES">%s</xliff:g> items deleted"</string>
-    <string name="select_all" msgid="837499881590001166">"Select all"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Start using Health Connect"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"Sync your first apps to share health and fitness data between them"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"Set up"</string>
@@ -1057,4 +1068,43 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"See compatible apps"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Find more apps to sync with <xliff:g id="APP_NAME">%s</xliff:g> via Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"See on app store"</string>
+    <string name="select_all" msgid="837499881590001166">"Select all"</string>
+    <!-- no translation found for deletion_confirmation_dialog_body (7643182907084645805) -->
+    <skip />
+    <!-- no translation found for all_data_selected_deletion_confirmation_dialog (2103387413531373305) -->
+    <skip />
+    <!-- no translation found for some_data_selected_deletion_confirmation_dialog (2466281529240054537) -->
+    <skip />
+    <!-- no translation found for all_app_data_selected_deletion_confirmation_dialog (1077157006579195958) -->
+    <skip />
+    <!-- no translation found for some_app_data_selected_deletion_confirmation_dialog (5378172524112070270) -->
+    <skip />
+    <!-- no translation found for all_entries_selected_day_deletion_confirmation_dialog (2887646600541520444) -->
+    <skip />
+    <!-- no translation found for all_entries_selected_week_deletion_confirmation_dialog (6759608395185369048) -->
+    <skip />
+    <!-- no translation found for all_entries_selected_month_deletion_confirmation_dialog (6030161837387559132) -->
+    <skip />
+    <!-- no translation found for some_entries_selected_day_deletion_confirmation_dialog (3481363886097542565) -->
+    <skip />
+    <!-- no translation found for some_entries_selected_week_deletion_confirmation_dialog (7150217982297131340) -->
+    <skip />
+    <!-- no translation found for some_entries_selected_month_deletion_confirmation_dialog (3712014725077445591) -->
+    <skip />
+    <!-- no translation found for one_entry_selected_deletion_confirmation_dialog (4642573082594021789) -->
+    <skip />
+    <!-- no translation found for all_app_entries_selected_day_deletion_confirmation_dialog (2342034541791960151) -->
+    <skip />
+    <!-- no translation found for all_app_entries_selected_week_deletion_confirmation_dialog (24289763841770386) -->
+    <skip />
+    <!-- no translation found for all_app_entries_selected_month_deletion_confirmation_dialog (3240581815583269052) -->
+    <skip />
+    <!-- no translation found for some_app_entries_selected_day_deletion_confirmation_dialog (1030347169774815676) -->
+    <skip />
+    <!-- no translation found for some_app_entries_selected_week_deletion_confirmation_dialog (8009352719322914060) -->
+    <skip />
+    <!-- no translation found for some_app_entries_selected_month_deletion_confirmation_dialog (6617805533334875710) -->
+    <skip />
+    <!-- no translation found for one_app_entry_selected_deletion_confirmation_dialog (7101939753210640660) -->
+    <skip />
 </resources>
