--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -267,15 +267,15 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"피부 온도"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"피부 온도 읽기"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"피부 온도 쓰기"</string>
-    <string name="all_medical_data_uppercase_label" msgid="8415418677595814587">"모든 의료 데이터"</string>
-    <string name="all_medical_data_lowercase_label" msgid="7173275705446657735">"모든 의료 데이터"</string>
-    <string name="all_medical_data_content_description" msgid="6103488863059447886">"모든 의료 데이터를 작성합니다."</string>
-    <!-- no translation found for allergy_intolerance_uppercase_label (962905760867412783) -->
+    <!-- no translation found for all_medical_data_uppercase_label (2380759160541898783) -->
     <skip />
-    <!-- no translation found for allergy_intolerance_lowercase_label (8705895234297776508) -->
+    <!-- no translation found for all_medical_data_lowercase_label (6293814928992081842) -->
     <skip />
-    <!-- no translation found for allergy_intolerance_content_description (5938549394285540206) -->
+    <!-- no translation found for all_medical_data_content_description (4846586780533295022) -->
     <skip />
+    <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"알레르기"</string>
+    <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"알레르기"</string>
+    <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"알레르기 데이터 읽기"</string>
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"예방 접종"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"예방 접종"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"예방 접종 데이터를 읽습니다."</string>
@@ -284,6 +284,12 @@
     <!-- no translation found for laboratory_results_lowercase_label (6437932041744631964) -->
     <skip />
     <!-- no translation found for laboratory_results_content_description (5882338877203692484) -->
+    <skip />
+    <!-- no translation found for medications_uppercase_label (4783281053427990225) -->
+    <skip />
+    <!-- no translation found for medications_lowercase_label (7808038774503092207) -->
+    <skip />
+    <!-- no translation found for medications_content_description (6165382876281780190) -->
     <skip />
     <!-- no translation found for pregnancy_uppercase_label (5979925175194337864) -->
     <skip />
@@ -360,7 +366,18 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"선택한 날짜"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"전날"</string>
     <string name="default_error" msgid="7966868260616403475">"문제가 발생했습니다. 다시 시도해 주세요."</string>
-    <string name="raw_fhir_content_description" msgid="4869120157736279594">"상세한 건강 기록"</string>
+    <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <skip />
+    <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
+    <skip />
+    <!-- no translation found for raw_fhir_closed_bracket (9084379463440675078) -->
+    <skip />
+    <!-- no translation found for raw_fhir_field_value (369633095565031835) -->
+    <skip />
+    <!-- no translation found for raw_fhir_value (8627152854130338531) -->
+    <skip />
+    <!-- no translation found for raw_fhir_content_description (1491420802097635439) -->
+    <skip />
     <string name="health_permission_header_description" msgid="7497601695462373927">"이 권한이 있는 앱은 내 건강/피트니스 데이터를 읽고 쓸 수 있습니다."</string>
     <string name="connected_apps_text" msgid="1177626440966855831">"헬스 커넥트에 저장된 데이터에 액세스할 수 있는 앱을 관리합니다. 어떤 데이터를 읽거나 쓸 수 있는지 검토할 앱을 탭하세요."</string>
     <string name="connected_apps_section_title" msgid="2415288099612126258">"액세스가 허용된 앱"</string>
@@ -1075,12 +1092,6 @@
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"이 앱의 백그라운드 또는 과거 데이터 액세스를 사용 설정하려면 읽기 권한을 1개 이상 사용 설정하세요."</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"이 앱의 백그라운드 액세스를 사용 설정하려면 읽기 권한을 1개 이상 사용 설정하세요."</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"이 앱의 과거 데이터 액세스를 사용 설정하려면 읽기 권한을 1개 이상 사용 설정하세요."</string>
-    <string name="all_data_selected_deletion_confirmation_dialog" msgid="8480788219767858637">"헬스 커넥트의 모든 데이터를 완전히 삭제하시겠습니까?"</string>
-    <string name="some_data_selected_deletion_confirmation_dialog" msgid="8053452143397916044">"헬스 커넥트에서 선택된 데이터를 완전히 삭제하시겠습니까?"</string>
-    <string name="all_data_selected_deletion_confirmation_toast" msgid="4053974969132498842">"모든 데이터가 삭제됨"</string>
-    <string name="one_data_type_deletion_confirmation_toast" msgid="7773896019111767141">"<xliff:g id="PERMISSION_TYPE">%s</xliff:g> 데이터 삭제됨"</string>
-    <string name="multiple_data_types_deletion_confirmation_toast" msgid="8500329390797706450">"<xliff:g id="NUMBER_PERMISSION_TYPES">%s</xliff:g>개 항목이 삭제됨"</string>
-    <string name="select_all" msgid="837499881590001166">"모두 선택"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"헬스 커넥트 사용 시작하기"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"첫 번째 앱을 동기화하여 앱 간에 건강 및 피트니스 데이터를 공유하세요"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"설정"</string>
@@ -1090,4 +1101,43 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"호환 가능한 앱 보기"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"헬스 커넥트를 통해 <xliff:g id="APP_NAME">%s</xliff:g> 앱과 동기화할 앱 더보기"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"앱 스토어에서 보기"</string>
+    <string name="select_all" msgid="837499881590001166">"모두 선택"</string>
+    <!-- no translation found for deletion_confirmation_dialog_body (7643182907084645805) -->
+    <skip />
+    <!-- no translation found for all_data_selected_deletion_confirmation_dialog (2103387413531373305) -->
+    <skip />
+    <!-- no translation found for some_data_selected_deletion_confirmation_dialog (2466281529240054537) -->
+    <skip />
+    <!-- no translation found for all_app_data_selected_deletion_confirmation_dialog (1077157006579195958) -->
+    <skip />
+    <!-- no translation found for some_app_data_selected_deletion_confirmation_dialog (5378172524112070270) -->
+    <skip />
+    <!-- no translation found for all_entries_selected_day_deletion_confirmation_dialog (2887646600541520444) -->
+    <skip />
+    <!-- no translation found for all_entries_selected_week_deletion_confirmation_dialog (6759608395185369048) -->
+    <skip />
+    <!-- no translation found for all_entries_selected_month_deletion_confirmation_dialog (6030161837387559132) -->
+    <skip />
+    <!-- no translation found for some_entries_selected_day_deletion_confirmation_dialog (3481363886097542565) -->
+    <skip />
+    <!-- no translation found for some_entries_selected_week_deletion_confirmation_dialog (7150217982297131340) -->
+    <skip />
+    <!-- no translation found for some_entries_selected_month_deletion_confirmation_dialog (3712014725077445591) -->
+    <skip />
+    <!-- no translation found for one_entry_selected_deletion_confirmation_dialog (4642573082594021789) -->
+    <skip />
+    <!-- no translation found for all_app_entries_selected_day_deletion_confirmation_dialog (2342034541791960151) -->
+    <skip />
+    <!-- no translation found for all_app_entries_selected_week_deletion_confirmation_dialog (24289763841770386) -->
+    <skip />
+    <!-- no translation found for all_app_entries_selected_month_deletion_confirmation_dialog (3240581815583269052) -->
+    <skip />
+    <!-- no translation found for some_app_entries_selected_day_deletion_confirmation_dialog (1030347169774815676) -->
+    <skip />
+    <!-- no translation found for some_app_entries_selected_week_deletion_confirmation_dialog (8009352719322914060) -->
+    <skip />
+    <!-- no translation found for some_app_entries_selected_month_deletion_confirmation_dialog (6617805533334875710) -->
+    <skip />
+    <!-- no translation found for one_app_entry_selected_deletion_confirmation_dialog (7101939753210640660) -->
+    <skip />
 </resources>
